k8s/12-minio-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: karsa-minio
  namespace: karsa-pantau
  labels:
    app: karsa-minio
spec:
  serviceName: karsa-minio-svc
  replicas: 1
  selector:
    matchLabels:
      app: karsa-minio
  template:
    metadata:
      labels:
        app: karsa-minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          command:
            - /bin/sh
            - -c
            - minio server /data --console-address :9001
          ports:
            - containerPort: 9000
              name: s3
            - containerPort: 9001
              name: console
          volumeMounts:
            - name: minio-data
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 15
  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Gi
---
apiVersion: v1
kind: Service
metadata:
  name: karsa-minio-svc
  namespace: karsa-pantau
spec:
  ports:
    - port: 9000
      name: s3
      targetPort: 9000
    - port: 9001
      name: console
      targetPort: 9001
  selector:
    app: karsa-minio
